    a value that was previously set (bug #37955)    
  - Fixed problem where executing a command that results in a fatal exception would not
    close the connection.  (bug #37991)
  - Fixed problem with byte and unsigned byte values writing more too many bytes when
    using prepared statements (bug #37968)      
    
Version 5.0.9 - 4/14/08

  - Fixed problem where fields that were blobs but did not include the BLOB flag were treated
    as binary when they should have been treated as text.  (Bug #30233)    
  - Changed from using Array.Copy to Buffer.BlockCopy in MySqlDataReader.GetBytes.  This
    helps with memory usage as we expect the source and destination arrays to not be overlapping.
    (Bug #31090)
  - Fixed problem that prevented commands from being executed from the state change
    handler.  Not sure why you would want to do this but...  (bug #30964)
  - Fixed problem with connection string caching where our collection class was 
    using case insensitive semantics and this causes cases where a user orginally
    used the wrong case for a user id and then fixed it to still get access denied
    errors. (Bug #31433) 
  - improved the speed of load data local infile significantly   
  - fixed MySqlDateTime.ToString() to properly return the date value (Bug #32010)   
  - fixed problem where string parameters who have their size set after their value could cause exceptions
    (Bug #32094)  
  - fixed problem where old code was preventing creating parameter objects with non-input direction using
    just a constructor (Bug #32093)  
  - fixed problem where a syntax error in a set of batch statements could leave the data adapter in a state
    that appears hung (bug #31930)
  - fixed the MySqlException class to set the server error code in the Data[] hash so that 
    DbProviderFactory users can access the server error code (Bug #27436) 
  - fixed problem where changing the connection string of a connection to one that changes